# hybrid-uncertainty

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: base.yaml  datasets.yaml  models.yaml
hybrid_uncertainty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cli/: evaluate.py  score.py  train.py
src/data/: datasets.py  transforms.py
src/eval/: arcs.py  metrics.py  reliability.py
src/models/: efficientnet_v2_s.py  mobilenet_v3_small.py  shufflenet_v2.py
src/train/: trainer.py
src/uncertainty/: entropy.py  gradients.py  hybrid.py  normalize.py
src/utils/: device.py  seed.py
